--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-	<groupId>jdi.tools</groupId>
+	<groupId>com.epam.jdi.tools</groupId>
     <artifactId>light-saber</artifactId>
     <name>Light Saber</name>
 	
